--- a/index.html
+++ b/index.html
@@ -377,27 +377,35 @@
         </div>
     </div>
 
-    <header class="hero">
+   <header class="hero">
     <div class="hero-avatar-container">
         <div class="hero-avatar-glow"></div>
         <div class="hero-avatar-ring"></div>
         <div class="hero-scan-line"></div>
 
-        <img 
-          src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/main/assets/sayanipfp%201.jpg" 
-          alt="Sayani Maity" 
-          class="hero-img">
+        <img
+            src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/main/assets/sayanipfp%201.jpg"
+            alt="Sayani Maity"
+            class="hero-img"
+        >
     </div>
-</header>
 
-
-        <div class="hero-tag">STATUS: ONLINE // SCANNING FOR OPPORTUNITIES</div>
-        <div class="glitch-wrapper">
-            <h1 class="glitch" data-text="SAYANI MAITY">SAYANI MAITY</h1>
+    <div class="hero-content">
+        <div class="status-bar">
+            STATUS : ONLINE // SCANNING FOR OPPORTUNITIES
         </div>
-        <p>Digital Forensics Analyst | CEH V13ai Certified | Cyber Sleuth</p>
-        <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
-   
+
+        <h1>SAYANI MAITY</h1>
+        <p class="hero-subtitle">
+            Digital Forensics Analyst | CEH V13ai Certified | Cyber Sleuth
+        </p>
+
+        <a href="#contact" class="hero-btn">
+            INITIALIZE CONTACT
+        </a>
+    </div>
+
+
 
     <section id="about" class="hidden">
         <h2 class="section-title hyper-text">FILE: PROFILE</h2>
@@ -1142,6 +1150,7 @@
 </body>
 
 </html>
+
 
 
 
