--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+.hero-avatar-container{
+    width:260px;
+    height:260px;
+    position:relative;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+.hero-img{
+    width:220px;
+    height:220px;
+    border-radius:50%;
+    object-fit:cover;
+}
+</style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sayani Maity | Digital Forensics & Cybersecurity</title>
@@ -399,10 +417,6 @@
         <p class="hero-subtitle">
             Digital Forensics Analyst | CEH V13ai Certified | Cyber Sleuth
         </p>
-
-        <a href="#contact" class="hero-btn">
-            INITIALIZE CONTACT
-        </a>
     </div>
 
 
@@ -429,11 +443,11 @@
                     <span class="stat-label">Major Projects</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">ISOEH</span>
-                    <span class="stat-label">Trained</span>
+                    <span class="stat-number">ISOEH (Indian School of Ethical Hacking)</span>
+                    <span class="stat-label">Student</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">10+</span>
+                    <span class="stat-number">15+</span>
                     <span class="stat-label">Tools Mastered</span>
                 </div>
             </div>
@@ -445,26 +459,26 @@
         <div class="carousel-wrapper">
             <div class="carousel-track">
                 <div class="carousel-item">WIRESHARK</div>
-                <div class="carousel-item">NMAP</div>
-                <div class="carousel-item">BURP SUITE</div>
+                <div class="carousel-item">FTK IMAGER</div>
+                <div class="carousel-item">EASEUS DATA RECOVERY</div>
                 <div class="carousel-item">METASPLOIT</div>
                 <div class="carousel-item">PYTHON</div>
                 <div class="carousel-item">AUTOPSY</div>
                 <div class="carousel-item">MAGNET AXIOM</div>
                 <div class="carousel-item">LINUX</div>
                 <div class="carousel-item">OPENVAS</div>
-                <div class="carousel-item">VAPT</div>
+                <div class="carousel-item">OXYGEN FORENSIC</div>
                 <div class="carousel-item">CRYPTOGRAPHY</div>
-                <div class="carousel-item">WIRESHARK</div>
+                <div class="carousel-item">ZAP</div>
                 <div class="carousel-item">NMAP</div>
                 <div class="carousel-item">BURP SUITE</div>
                 <div class="carousel-item">METASPLOIT</div>
-                <div class="carousel-item">PYTHON</div>
-                <div class="carousel-item">AUTOPSY</div>
+                <div class="carousel-item">BASH SCRIPTING</div>
+                <div class="carousel-item">SHELL SCRIPTING</div>
                 <div class="carousel-item">MAGNET AXIOM</div>
                 <div class="carousel-item">LINUX</div>
-                <div class="carousel-item">OPENVAS</div>
-                <div class="carousel-item">VAPT</div>
+                <div class="carousel-item">UBUNTU</div>
+                <div class="carousel-item">CELLEBRITE</div>
                 <div class="carousel-item">CRYPTOGRAPHY</div>
             </div>
         </div>
@@ -478,12 +492,14 @@
                     <span class="tag">FTK Imager</span>
                     <span class="tag">Mobile Forensics</span>
                     <span class="tag">Evidence Analysis</span>
+                    <span class="tag">Cellebrite</span>
+                    <span class="tag">Oxygen detective forensic</span>
                 </div>
             </div>
             <div class="skill-category">
                 <h3>// OFFENSIVE_SEC</h3>
                 <div class="skill-tags">
-                    <span class="tag">Burp Suite</span>
+                    <span class="tag">Burp Suite Pro</span>
                     <span class="tag">Nmap</span>
                     <span class="tag">OpenVAS</span>
                     <span class="tag">Wireshark</span>
@@ -509,6 +525,9 @@
                     <span class="tag">Network Security</span>
                     <span class="tag">Cryptography</span>
                     <span class="tag">Social Engineering</span>
+                    <span class="tag">Digital Forensics</span>
+                    <span class="tag">Mobile Forensics</span>
+                    <span class="tag">Computer Forensics</span>
                 </div>
             </div>
         </div>
@@ -1150,6 +1169,7 @@
 </body>
 
 </html>
+
 
 
 
