--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     </div>
 
     <nav>
-        <div class="logo">&lt;SM_SEC /&gt;</div>
+        <div class="logo">&lt;sayanimaity78 /&gt;</div>
         <div class="nav-links">
             <a href="#about" class="nav-link">FILE: PROFILE</a>
             <a href="#skills" class="nav-link">ARSENAL</a>
@@ -1171,4 +1171,5 @@
     </script>
 </body>
 </html>
+
 
