--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 </div>
                 </div>
             <div class="skill-category">
-                <h3>// </h3>
+                <h3>//Data Protection & Info Hiding </h3>
                 <div class="skill-tags">
                    <span class="tag">Cryptography</span>
                     <span class="tag">Steganography</span>
@@ -1171,5 +1171,6 @@
     </script>
 </body>
 </html>
+
 
 
