--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 </div>
                 </div>
             <div class="skill-category">
-                <h3>//Data Protection & Info Hiding </h3>
+                <h3>// Data Protection & Info Hiding </h3>
                 <div class="skill-tags">
                    <span class="tag">Cryptography</span>
                     <span class="tag">Steganography</span>
@@ -545,91 +545,87 @@
     <div class="projects-grid">
 
         <!-- PROJECT 1 -->
-        <div class="project-card">
-            <div class="project-card-inner">
+        <div class="project-card" onclick="window.open('https://github.com/isayani-78/forensic-analyzer', '_blank')">
+    <div class="project-card-inner">
 
-                <div class="project-card-front">
-                    <img src="project1.png" alt="Forensic Analyzer" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Forensic Analyzer</h3>
-                    <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
-                        Web-based Digital Forensic Learning Tool implementing hashing and encoding techniques. 
-                    </p>
-                    <a href="https://github.com/isayani-78/forensic-analyzer" 
-   target="_blank" 
-   style="font-size:12px; text-decoration:none; border:1px solid currentColor; padding:4px 10px; color:#fff;">
-   View on GitHub
-</a>
-
-                </div>
-
-                <div class="project-card-back">
-                    <span class="project-date">Nov 2025 - Present</span>
-                    <h3 class="project-title">Forensic Analyzer.</h3>
-                    <p class="project-desc">A web-based Digital Forensic Learning Tool. Implemented basic hashing and encoding features for educational analysis. (Academic Project)</p>
-                    <div class="project-tech">PYTHON // WEB // HASHING</div>
-                </div>
-
-            </div>
+        <div class="project-card-front">
+            <img src="project1.png" alt="Forensic Analyzer" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
+            <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Forensic Analyzer</h3>
+            <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
+                Web-based Digital Forensic Learning Tool implementing hashing and encoding techniques. 
+            </p>
+            <a href="https://github.com/isayani-78/forensic-analyzer" 
+               target="_blank" 
+               style="font-size:12px; text-decoration:none; border:1px solid currentColor; padding:4px 10px; color:#fff;">
+               View on GitHub
+            </a>
         </div>
 
-        <!-- PROJECT 2 -->
-        <div class="project-card">
-            <div class="project-card-inner">
-
-                <div class="project-card-front">
-                    <img src="project2.png" alt="Cyber Security Multi-Tool" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Cyber Security Multi-Tool Launcher (CMTL).</h3>
-                    <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
-                        GUI platform for VAPT, Pen Testing, and Network Scanning.
-                    </p>
-                    <a href="https://github.com/isayani-78/CMTL" 
-   target="_blank" 
-   style="font-size:12px; text-decoration:none; border:1px solid currentColor; padding:4px 10px; color:#fff;">
-   View on GitHub
-</a>
-
-                </div>
-
-                <div class="project-card-back">
-                    <span class="project-date">Aug 2025 - Present</span>
-                    <h3 class="project-title">Cyber Security Multi-Tool Launcher</h3>
-                    <p class="project-desc">GUI platform for VAPT, Pen Testing, and Network Scanning. A one-click interface to streamline tasks for efficiency. (Academic Project)</p>
-                    <div class="project-tech">GUI // VAPT // AUTOMATION</div>
-                </div>
-
-            </div>
-        </div>
-
-        <!-- PROJECT 3 -->
-        <div class="project-card">
-            <div class="project-card-inner">
-
-                <div class="project-card-front">
-                    <img src="project3.png" alt="AI Phishing Detector" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
-                    <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">AI-Powered Phishing Email Detector.</h3>
-                    <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
-                        Detects phishing emails using AI analysis of headers and content.
-                    </p>
-                    <a href="https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector" 
-   target="_blank" 
-   style="font-size:12px; text-decoration:none; border:1px solid currentColor; padding:4px 10px; color:#fff;">
-   View on GitHub
-</a>
-
-                </div>
-
-                <div class="project-card-back">
-                    <span class="project-date">June 2025 - Present</span>
-                    <h3 class="project-title">AI-Powered Phishing Email Detector</h3>
-                    <p class="project-desc">Detects phishing emails using AI-based analysis of headers and content to identify malicious patterns.</p>
-                    <div class="project-tech">AI // EMAIL SEC // THREAT INTEL</div>
-                </div>
-
-            </div>
+        <div class="project-card-back">
+            <span class="project-date">Nov 2025 - Present</span>
+            <h3 class="project-title">Forensic Analyzer.</h3>
+            <p class="project-desc">A web-based Digital Forensic Learning Tool. Implemented basic hashing and encoding features for educational analysis. (Academic Project)</p>
+            <div class="project-tech">PYTHON // WEB // HASHING</div>
         </div>
 
     </div>
-</section>
+</div>
+
+        <!-- PROJECT 2 -->
+       <div class="project-card" onclick="window.open('https://github.com/isayani-78/CMTL', '_blank')">
+    <div class="project-card-inner">
+
+        <div class="project-card-front">
+            <img src="project2.png" alt="Cyber Security Multi-Tool" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
+            <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">Cyber Security Multi-Tool Launcher (CMTL).</h3>
+            <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
+                GUI platform for VAPT, Pen Testing, and Network Scanning.
+            </p>
+            <a href="https://github.com/isayani-78/CMTL" 
+               target="_blank" 
+               style="font-size:12px; text-decoration:none; border:1px solid currentColor; padding:4px 10px; color:#fff;">
+               View on GitHub
+            </a>
+        </div>
+
+        <div class="project-card-back">
+            <span class="project-date">Aug 2025 - Present</span>
+            <h3 class="project-title">Cyber Security Multi-Tool Launcher</h3>
+            <p class="project-desc">GUI platform for VAPT, Pen Testing, and Network Scanning. A one-click interface to streamline tasks for efficiency. (Academic Project)</p>
+            <div class="project-tech">GUI // VAPT // AUTOMATION</div>
+        </div>
+
+    </div>
+</div>
+
+
+        <!-- PROJECT 3 -->
+        <div class="project-card" onclick="window.open('https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector', '_blank')">
+    <div class="project-card-inner">
+
+        <div class="project-card-front">
+            <img src="project3.png" alt="AI Phishing Detector" style="width:70px; height:70px; object-fit:contain; margin-bottom:10px;">
+            <h3 style="color:#fff; font-weight:bold; font-size:16px; margin-bottom:6px;">AI-Powered Phishing Email Detector.</h3>
+            <p style="font-size:13px; line-height:1.4; opacity:0.85; margin-bottom:10px;">
+                Detects phishing emails using AI analysis of headers and content.
+            </p>
+            <a href="https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector" 
+               target="_blank" 
+               style="font-size:12px; text-decoration:none; border:1px solid currentColor; padding:4px 10px; color:#fff;">
+               View on GitHub
+            </a>
+        </div>
+
+        <div class="project-card-back">
+            <span class="project-date">June 2025 - Present</span>
+            <h3 class="project-title">AI-Powered Phishing Email Detector</h3>
+            <p class="project-desc">Detects phishing emails using AI-based analysis of headers and content to identify malicious patterns.</p>
+            <div class="project-tech">AI // EMAIL SEC // THREAT INTEL</div>
+        </div>
+
+    </div>
+</div>
+
    <!-- UPDATED CERTIFICATIONS SECTION -->
 <section id="credentials" class="hidden">
     <h2 class="section-title hyper-text">CREDENTIALS</h2>
@@ -1171,6 +1167,7 @@
     </script>
 </body>
 </html>
+
 
 
 
