--- a/index.html
+++ b/index.html
@@ -570,7 +570,6 @@
 
     </div>
 </div>
-
         <!-- PROJECT 2 -->
        <div class="project-card" onclick="window.open('https://github.com/isayani-78/CMTL', '_blank')">
     <div class="project-card-inner">
@@ -598,8 +597,7 @@
     </div>
 </div>
 
-
-        <!-- PROJECT 3 -->
+<!-- PROJECT 3 -->
         <div class="project-card" onclick="window.open('https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector', '_blank')">
     <div class="project-card-inner">
 
@@ -853,7 +851,7 @@
             <a href="https://twitter.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#1DA1F2; border-radius:6px; text-decoration:none; color:#fff;">Twitter</a>
             <a href="https://facebook.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#1877F2; border-radius:6px; text-decoration:none; color:#fff;">Facebook</a>
             <a href="https://discord.com/users/yourdiscordid" target="_blank" style="padding:8px 12px; background:#5865F2; border-radius:6px; text-decoration:none; color:#fff;">Discord</a>
-            <a href="https://t.me/sayanimaity" target="_blank" style="padding:8px 12px; background:#0088cc; border-radius:6px; text-decoration:none; color:#fff;">Telegram</a>
+            <a href="https://t.me/@isayani_78" target="_blank" style="padding:8px 12px; background:#0088cc; border-radius:6px; text-decoration:none; color:#fff;">Telegram</a>
         </div>
 
         <!-- Contact Form -->
@@ -1167,6 +1165,7 @@
     </script>
 </body>
 </html>
+
 
 
 
