--- a/index.html
+++ b/index.html
@@ -528,7 +528,6 @@
                  <div class="cert-card" onclick="openCert('Cyraksha CTF Hackathon 2', 'Cyraksha Cyber Club', 'Participation in CTF of Cyraksha.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20CTF%20of%20Cyraksha%20(The%20Cyber%20Club%20of%20Kolkata)%20%5BHackathon%202%5D.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20CTF%20of%20Cyraksha%20(The%20Cyber%20Club%20of%20Kolkata)%20%5BHackathon%202%5D.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">Cyraksha Hackathon</div><div class="cert-issuer">Cyber Club</div></div></div>
                  <div class="cert-card" onclick="openCert('Cyraksha CTF Workshop', 'Cyraksha Cyber Club', 'Participation In CTF workshop.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20In%20CTF%20workshop%20By%20Cyraksha%20(The%20Cyber%20Club%20Of%20Kolkata).jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20In%20CTF%20workshop%20By%20Cyraksha%20(The%20Cyber%20Club%20Of%20Kolkata).jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">CTF Workshop</div><div class="cert-issuer">Cyber Club</div></div></div>
                  <div class="cert-card" onclick="openCert('CEH V13ai', 'EC-Council', 'Certified Ethical Hacker', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">CEH V13ai</div><div class="cert-issuer">EC-Council</div></div></div>
-                 <div class="cert-card" onclick="openCert('CHFI Investigator', 'Pursuing', 'Computer Hacking Forensic Investigator.', '')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background: repeating-linear-gradient(-45deg, #1a0505, #1a0505 10px, #330000 10px, #330000 20px);"></div><div class="cert-overlay"><span>IN PROGRESS</span></div></div><div class="cert-content"><div class="cert-name">CHFI</div><div class="cert-issuer">Pursuing</div></div></div>
                  <div class="cert-card" onclick="openCert('Cryptoquest Participation', 'CTF Event', 'Participation in Cryptoquest.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20Cryptoquest.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20Cryptoquest.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">Cryptoquest</div><div class="cert-issuer">CTF Event</div></div></div>
                  <div class="cert-card" onclick="openCert('GroundZero WB Hackathon', 'ISOEH', 'GroundZero West Bengal Hackathon.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20Maity%20GroundZero%20WB%20Hackathon%20ISOEH%20Certificate.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20Maity%20GroundZero%20WB%20Hackathon%20ISOEH%20Certificate.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">GroundZero</div><div class="cert-issuer">ISOEH</div></div></div>
 
@@ -547,7 +546,6 @@
                  <div class="cert-card" onclick="openCert('Cyraksha CTF Hackathon 2', 'Cyraksha Cyber Club', 'Participation in CTF of Cyraksha.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20CTF%20of%20Cyraksha%20(The%20Cyber%20Club%20of%20Kolkata)%20%5BHackathon%202%5D.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20CTF%20of%20Cyraksha%20(The%20Cyber%20Club%20of%20Kolkata)%20%5BHackathon%202%5D.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">Cyraksha Hackathon</div><div class="cert-issuer">Cyber Club</div></div></div>
                  <div class="cert-card" onclick="openCert('Cyraksha CTF Workshop', 'Cyraksha Cyber Club', 'Participation In CTF workshop.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20In%20CTF%20workshop%20By%20Cyraksha%20(The%20Cyber%20Club%20Of%20Kolkata).jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20In%20CTF%20workshop%20By%20Cyraksha%20(The%20Cyber%20Club%20Of%20Kolkata).jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">CTF Workshop</div><div class="cert-issuer">Cyber Club</div></div></div>
                  <div class="cert-card" onclick="openCert('CEH V13ai', 'EC-Council', 'Certified Ethical Hacker', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">CEH V13ai</div><div class="cert-issuer">EC-Council</div></div></div>
-                 <div class="cert-card" onclick="openCert('CHFI Investigator', 'Pursuing', 'Computer Hacking Forensic Investigator.', '')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background: repeating-linear-gradient(-45deg, #1a0505, #1a0505 10px, #330000 10px, #330000 20px);"></div><div class="cert-overlay"><span>IN PROGRESS</span></div></div><div class="cert-content"><div class="cert-name">CHFI</div><div class="cert-issuer">Pursuing</div></div></div>
                  <div class="cert-card" onclick="openCert('Cryptoquest Participation', 'CTF Event', 'Participation in Cryptoquest.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20Cryptoquest.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Participation%20in%20Cryptoquest.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">Cryptoquest</div><div class="cert-issuer">CTF Event</div></div></div>
                  <div class="cert-card" onclick="openCert('GroundZero WB Hackathon', 'ISOEH', 'GroundZero West Bengal Hackathon.', 'https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20Maity%20GroundZero%20WB%20Hackathon%20ISOEH%20Certificate.jpg')"><div class="cert-img-wrapper"><div class="cert-img-thumb" style="background-image: url('https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20Maity%20GroundZero%20WB%20Hackathon%20ISOEH%20Certificate.jpg')"></div><div class="cert-overlay"><span>VIEW</span></div></div><div class="cert-content"><div class="cert-name">GroundZero</div><div class="cert-issuer">ISOEH</div></div></div>
             </div>
@@ -589,18 +587,50 @@
         <h2 class="section-title hyper-text">SECURE UPLINK</h2>
         <div class="contact-box">
             <p>Initiate handshake protocol.</p>
-            <div class="contact-links">
-                <a href="mailto:sayanimaity78@gmail.com" class="contact-btn"><span>✉</span> EMAIL</a>
-                <a href="https://github.com/isayani-78" target="_blank" class="contact-btn"><span>git</span> GITHUB</a>
-                <a href="https://x.com/isayani78" target="_blank" class="contact-btn"><span>𝕏</span> TWITTER</a>
-                <a href="https://sayanimaity78.site" target="_blank" class="contact-btn"><span>🌐</span> PORTFOLIO</a>
-                <a href="https://linkedin.com/in/sayanimaity" target="_blank" class="contact-btn"><span>in</span> LINKEDIN</a>
-            </div>
+           <section id="contact" style="display:flex; justify-content:center; align-items:center; min-height:100vh; background-color:#121212; color:#fff;">
+    <div style="width:100%; max-width:600px; padding:30px; background-color:#1e1e1e; border-radius:15px; box-shadow:0 4px 20px rgba(0,0,0,0.5); text-align:center;">
+
+        <!-- Contact Heading -->
+        <h2 style="color:#fff; font-weight:bold; margin-bottom:20px;">Contact</h2>
+
+        <!-- Contact Description -->
+        <p style="font-size:16px; margin-bottom:10px;">
+            Initiate handshake protocol. Ready to deploy remotely or on-site collaborative investigations.
+        </p>
+
+        <!-- Email Display -->
+        <p style="font-size:16px; margin-bottom:20px; color:#00ff66; font-weight:bold;">
+            sayanimaity78@gmail.com
+        </p>
+
+        <!-- Social Links -->
+        <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin-bottom:25px;">
+            <a href="https://linkedin.com/in/sayanimaity" target="_blank" style="padding:8px 12px; background:#0077b5; border-radius:6px; text-decoration:none; color:#fff;">LinkedIn</a>
+            <a href="https://github.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#24292f; border-radius:6px; text-decoration:none; color:#fff;">GitHub</a>
+            <a href="https://medium.com/@sayanimaity" target="_blank" style="padding:8px 12px; background:#000000; border-radius:6px; text-decoration:none; color:#fff;">Medium</a>
+            <a href="https://twitter.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#1DA1F2; border-radius:6px; text-decoration:none; color:#fff;">Twitter</a>
+            <a href="https://facebook.com/sayanimaity" target="_blank" style="padding:8px 12px; background:#1877F2; border-radius:6px; text-decoration:none; color:#fff;">Facebook</a>
+            <a href="https://discord.com/users/yourdiscordid" target="_blank" style="padding:8px 12px; background:#5865F2; border-radius:6px; text-decoration:none; color:#fff;">Discord</a>
+            <a href="https://t.me/@isayani_78" target="_blank" style="padding:8px 12px; background:#0088cc; border-radius:6px; text-decoration:none; color:#fff;">Telegram</a>
         </div>
-    </section>
+
+        <!-- Contact Form -->
+        <form id="contact-form" style="display:flex; flex-direction:column; gap:15px;">
+            <div style="display:flex; gap:10px; flex-wrap:wrap;">
+                <input type="text" name="name" placeholder="Your Name *" required style="flex:1; padding:10px; border-radius:6px; border:none;">
+                <input type="email" name="email" placeholder="Your Email *" required style="flex:1; padding:10px; border-radius:6px; border:none;">
+            </div>
+            <input type="text" name="subject" placeholder="Your Subject.." style="padding:10px; border-radius:6px; border:none;">
+            <textarea name="message" placeholder="Your Message..." rows="6" style="padding:10px; border-radius:6px; border:none;"></textarea>
+            <button type="submit" style="padding:10px 20px; background:#ff4d4d; color:#fff; border:none; border-radius:8px; cursor:pointer;">Send Message</button>
+        </form>
+
+    </div>
+</section>
+
 
     <footer>
-        <p>SYSTEM STATUS: OPTIMAL | © 2026 SAYANI MAITY | DESIGNED BY AI</p>
+        <p>SYSTEM STATUS: OPTIMAL | © 2026 SAYANI MAITY </p>
     </footer>
 
     <script>
@@ -815,4 +845,5 @@
         document.getElementById('cert-modal').addEventListener('click', (e) => { if (e.target.id === 'cert-modal') closeModal(); });
     </script>
 </body>
+
 </html>
